syntax = "proto3";

package pb;

option go_package = "./product";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// create product
message CreateProductRequest {
  string name = 1;
  int32 price = 4;
  int32 stock = 5;
}

message CreateProductResponse {
  string id = 1;
  int64 status = 2;
  string error = 3;
}

// find one
message FindOneRequest {
  string id = 1;
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

message FindOneData {
  string id = 1;
  string name = 2;
  int32 price = 3;
  int32 stock = 4;
}

// decrease stock
message DecreaseStockRequest {
  string id = 1;
  string orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}